<resources>
    <string name="app_name">Teach Me</string>
    <string name="action_settings">Settings</string>
    <string name="default_item_blurb">This is the description of the person, place or thing you have entered</string>
    <string name="menu_settings">Settings</string>
    <string name="item_settings">Item Settings</string>
    <string name="add_item">Add Item</string>


    <string name="category_people">people</string>
    <string name="category_animals">animals</string>
    <string name="category_food">food</string>
    <string name="animal_label_cat">cat</string>
    <string name="animal_label_cow">cow</string>
    <string name="animal_label_dog">dog</string>
    <string name="animal_label_owl">owl</string>
    <string name="animal_label_elephant">elephant</string>
    <string name="animal_label_lion">lion</string>
    <string name="animal_label_squirrel">squirrel</string>


    <string name="person_name_grandpa_bones">grandpa bones</string>
    <string name="person_name_grandpa_porter">grandpa porter</string>
    <string name="person_name_grandma_amy">grandma amy</string>
    <string name="person_name_grandma_carmen">grandma carmen</string>
    <string name="person_name_uncle_tone">uncle tone</string>
    <string name="person_name_uncle_vinnie">uncle vinnie</string>
    <string name="person_name_aunt_mel">aunt melly</string>
    <string name="person_name_cousin_rachel">rachel</string>
    <string name="person_name_cousin_porter">porter</string>
    <string name="person_name_cousin_sophia">sophia</string>
    <string name="person_name_aunt_pam">aunt pam</string>
    <string name="person_name_aunt_debi">aunt debi</string>
    <string name="person_name_aunt_punkin">aunt punkin</string>

    <string name="person_name_dad">dad</string>
    <string name="person_name_mom">mommy</string>
    <string name="person_name_brother">brother</string>
    <string name="person_name_sister">sister</string>
    <string name="person_name_aunt">aunt</string>
    <string name="person_name_uncle">uncle</string>
    <string name="person_name_grandpa">grandpa</string>
    <string name="person_name_grandma">grandma</string>

    <string name="food_name_apple">apple</string>
    <string name="food_name_banana">banana</string>
    <string name="food_name_brocolli">brocolli</string>

    <string name="food_name_grapes">grapes</string>
    <string name="food_name_oranges">oranges</string>
    <string name="food_name_peas">peas</string>
    <string name="food_name_strawberries">strawberries</string>
    <string name="food_name_tomatoes">tomatoes</string>


    <string name="default_columns">2</string>


    <string name="take_photo">Take a Photo</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_category">Add Category</string>

    <string name="set_category_label">Set Category:</string>
    <string name="set_name_label">Set Name:</string>
    <string name="set_photo_label">Set Photo:</string>
    <string name="cancel">Cancel</string>
    <string name="save_item">Save</string>
    <string name="delete_item">Delete</string>
    <string name="add_card">Add Info</string>

    <string name="edit_mode_off">Edit Mode</string>
    <string name="edit_mode_on">Exit Edit Mode</string>
    <string name="edit_mode_turned_on">Edit Mode Is On</string>
    <string name="edit_mode_turned_off">Edit Mode Is Off</string>


    <string name="android_resource_uri_base" translatable="false">android.resource://com.example.android.project7/</string>

    <string name="username">Username</string>
    <string name="backup_db">Backup db</string>
    <string name="restore_db">Restore db</string>
    <string name="add_card_edit_mode_warning">You must be in edit mode to add info</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="default_name">name</string>
    <string name="default_category">default</string>
    <string name="enter_category_warning">You must enter a category to add item</string>
    <string name="delete_item_warning">You must be in edit mode to delete item</string>
    <string name="transition_image_avatar">transition_image_avatar</string>
    <string name="transition_image_text">transition_image_text</string>
    <string name="open_drawer_warning">You must be in edit mode to open drawer</string>
    <string name="get_file_failed_warning">Selected picture must be in local folder</string>
    <string name="take_photo_failed_warning">Image not loaded, device may not be supported</string>

    <string name="restore_db_button">RESTORE</string>
    <string name="restore_db_title">Restore Database</string>
    <string name="db_restore_hint">Choose file or RESTORE for default backup</string>

    <string name="default_restore_path" translatable="false">/storage/emulated/0/Download/items.db</string>
    <!--"/data/user/0/com.example.android.project7/databases/items.db"-->
    <string name="default_db_path" translatable="false">/data/user/0/com.example.android.project7/databases/items.db</string>
    <string name="db_copy_name" translatable="false">/items_db_copy.db</string>
    <string name="get_content_type_file" translatable="false">file/*</string>
    <string name="ad_unit_id">ca-app-pub-3364537753375699/5339388964</string>
    <string name="ad_app_id">ca-app-pub-3364537753375699~3862655769</string>
    <string name="appwidget_text">Teach Me</string>
    <string name="add_widget">Add widget</string>
    <string name="no_names_text">No people have been added</string>
</resources>
