<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_dialog_main_layout"
    android:theme="@style/AlertDialog.AppCompat"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/set_category_label"
            android:text="@string/set_category_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:theme="@style/TextAppearance.AppCompat.Headline"/>
        <!--android:gravity="center|right"-->
        <!--android:layout_weight="1"-->


        <AutoCompleteTextView
            android:id="@+id/set_category_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!--android:gravity="center"-->

        </AutoCompleteTextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/set_name_label"
            android:text="@string/set_name_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:theme="@style/TextAppearance.AppCompat.Headline"/>
        <!--android:layout_weight="1"-->
        <!--android:gravity="center|right"-->

        <AutoCompleteTextView
            android:id="@+id/set_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!--android:layout_gravity="center"-->
            <!--android:layout_weight="1"-->

        </AutoCompleteTextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/set_photo_label"
            android:text="@string/set_photo_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:theme="@style/TextAppearance.AppCompat.Headline"/>
        <!--android:gravity="center|right"-->
        <!--android:layout_weight="1"-->

        <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal">-->
            <ImageButton
                android:id="@+id/take_photo_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/get_photo_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/photo_url_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        <!--</LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_item"
            />
        <Button
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>

    </LinearLayout>



</LinearLayout>